--- a/index.html
+++ b/index.html
@@ -11,138 +11,19 @@
 <meta http-equiv="X-Content-Type-Options" content="nosniff">
 <meta http-equiv="X-Frame-Options" content="DENY">
 <meta http-equiv="Referrer-Policy" content="no-referrer">
+<meta http-equiv="Content-Security-Policy"
+content="default-src 'self';
+script-src 'self';
+style-src 'self' https://fonts.googleapis.com;
+font-src https://fonts.gstatic.com;
+object-src 'none';
+frame-ancestors 'none';">
 
-<!-- CryptoJS (Safer CDN) -->
-<script src="https://cdn.jsdelivr.net/npm/crypto-js@4.1.1/crypto-js.min.js"></script>
+<link rel="stylesheet" href="style.css">
 
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Fira+Code:wght@400;500&display=swap" rel="stylesheet">
 
-<style>
-:root{
-  --bg:#0b0f19;
-  --card:#0f172a;
-  --border:#1e293b;
-  --accent:#00f0ff;
-  --green:#00ff88;
-  --text:#ffffff;
-}
-
-*{
-  margin:0;
-  padding:0;
-  box-sizing:border-box;
-  font-family:'Inter',sans-serif;
-}
-
-body{
-  background:var(--bg);
-  color:var(--text);
-}
-
-nav{
-  display:flex;
-  justify-content:space-between;
-  padding:25px 8%;
-  align-items:center;
-}
-
-.logo{
-  font-weight:700;
-  font-size:20px;
-  color:var(--accent);
-}
-
-.hero{
-  text-align:center;
-  padding:80px 20px 60px;
-}
-
-.hero h1{
-  font-size:42px;
-  background:linear-gradient(90deg,var(--accent),#8b5cf6);
-  -webkit-background-clip:text;
-  -webkit-text-fill-color:transparent;
-}
-
-.hero p{
-  margin:20px auto;
-  max-width:600px;
-  opacity:.8;
-}
-
-.section{
-  padding:60px 8%;
-}
-
-.tool-box{
-  max-width:900px;
-  margin:auto;
-  background:var(--card);
-  border-radius:12px;
-  padding:35px;
-  border:1px solid var(--border);
-}
-
-.tool-header{
-  font-family:'Fira Code',monospace;
-  color:var(--green);
-  margin-bottom:20px;
-}
-
-select,textarea,input{
-  width:100%;
-  padding:12px;
-  margin-bottom:15px;
-  border-radius:6px;
-  border:1px solid var(--border);
-  background:black;
-  color:var(--green);
-  font-family:'Fira Code',monospace;
-}
-
-.buttons{
-  display:flex;
-  flex-wrap:wrap;
-  gap:12px;
-}
-
-button{
-  padding:10px 18px;
-  border:none;
-  border-radius:6px;
-  cursor:pointer;
-  font-weight:600;
-}
-
-.encrypt{background:var(--green);color:black;}
-.decrypt{background:var(--accent);color:black;}
-.copy{background:#8b5cf6;color:white;}
-
-.output{
-  margin-top:20px;
-  padding:15px;
-  min-height:60px;
-  border-radius:6px;
-  background:black;
-  color:var(--green);
-  font-family:'Fira Code',monospace;
-}
-
-.info{
-  margin-top:20px;
-  font-size:14px;
-  opacity:.8;
-}
-
-footer{
-  text-align:center;
-  padding:40px;
-  opacity:.6;
-  font-size:14px;
-}
-</style>
 </head>
-
 <body>
 
 <nav>
@@ -171,9 +52,9 @@ footer{
     <input id="key" placeholder="Secret key (for AES only)">
 
     <div class="buttons">
-      <button class="encrypt" onclick="encrypt()">Encrypt / Hash</button>
-      <button class="decrypt" onclick="decrypt()">Decrypt</button>
-      <button class="copy" onclick="copyOutput()">Copy</button>
+      <button class="encrypt" id="encryptBtn">Encrypt / Hash</button>
+      <button class="decrypt" id="decryptBtn">Decrypt</button>
+      <button class="copy" id="copyBtn">Copy</button>
     </div>
 
     <div id="output" class="output"></div>
@@ -189,71 +70,9 @@ footer{
 © 2026 CipherX Pro | Educational Cryptography Project
 </footer>
 
-<script>
-function encrypt(){
-  let algo=document.getElementById("algorithm").value;
-  let text=document.getElementById("input").value;
-  let key=document.getElementById("key").value;
-  let result="";
-
-  try{
-    switch(algo){
-      case "aes":
-        result=CryptoJS.AES.encrypt(text,key).toString();
-        break;
-      case "sha256":
-        result=CryptoJS.SHA256(text).toString();
-        break;
-      case "sha512":
-        result=CryptoJS.SHA512(text).toString();
-        break;
-      case "base64":
-        result=btoa(text);
-        break;
-      case "rot13":
-        result=text.replace(/[a-zA-Z]/g,c=>
-          String.fromCharCode((c<="Z"?90:122)>=(c=c.charCodeAt(0)+13)?c:c-26)
-        );
-        break;
-    }
-    document.getElementById("output").innerText=result;
-  }catch{
-    document.getElementById("output").innerText="Error processing input.";
-  }
-}
-
-function decrypt(){
-  let algo=document.getElementById("algorithm").value;
-  let text=document.getElementById("input").value;
-  let key=document.getElementById("key").value;
-  let result="";
-
-  try{
-    switch(algo){
-      case "aes":
-        result=CryptoJS.AES.decrypt(text,key).toString(CryptoJS.enc.Utf8);
-        break;
-      case "base64":
-        result=atob(text);
-        break;
-      case "rot13":
-        result=text.replace(/[a-zA-Z]/g,c=>
-          String.fromCharCode((c<="Z"?90:122)>=(c=c.charCodeAt(0)+13)?c:c-26)
-        );
-        break;
-      default:
-        result="Hash functions cannot be decrypted.";
-    }
-    document.getElementById("output").innerText=result || "Invalid key/input.";
-  }catch{
-    document.getElementById("output").innerText="Decryption failed.";
-  }
-}
-
-function copyOutput(){
-  navigator.clipboard.writeText(document.getElementById("output").innerText);
-}
-</script>
+<!-- Local CryptoJS -->
+<script src="crypto-js.min.js"></script>
+<script src="script.js"></script>
 
 </body>
 </html>
