--- a/index.html
+++ b/index.html
@@ -3,57 +3,58 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>CipherX Crypto Lab</title>
+<title>CipherX Professional Suite</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<header>
-  <h1>CipherX Crypto Lab</h1>
-</header>
-
-<section class="hero">
-  <h2>Encrypt • Hash • Secure</h2>
-</section>
-
-<section class="terminal-section">
-  <div class="terminal">
-    <div class="terminal-header">
-      <span class="dot red"></span>
-      <span class="dot yellow"></span>
-      <span class="dot green"></span>
-    </div>
-    <div class="terminal-body">
-      <span id="terminalText"></span><span class="cursor">|</span>
-    </div>
-  </div>
-</section>
-
-<section class="crypto-section">
+<div class="container">
   <div class="card">
 
-    <select id="algorithm">
-      <option value="aes">AES</option>
-      <option value="sha256">SHA-256</option>
-      <option value="base64">Base64</option>
-    </select>
+    <h1>CipherX Professional Suite</h1>
 
-    <textarea id="inputText" placeholder="Enter text..."></textarea>
+    <div class="section">
+      <h2>Text Encryption</h2>
 
-    <input type="password" id="keyInput" placeholder="Enter key (for AES only)">
+      <select id="algorithm">
+        <option value="aes-gcm">AES-256-GCM</option>
+        <option value="aes-cbc">AES-256-CBC</option>
+        <option value="rsa">RSA-OAEP (2048)</option>
+        <option value="base64">Base64</option>
+        <option value="sha256">SHA-256 (Hash)</option>
+      </select>
 
-    <div class="buttons">
-      <button id="encryptBtn">Encrypt / Hash</button>
-      <button id="decryptBtn">Decrypt</button>
-      <button id="copyBtn">Copy</button>
+      <select id="mode">
+        <option value="encrypt">Encrypt</option>
+        <option value="decrypt">Decrypt</option>
+      </select>
+
+      <textarea id="inputText" placeholder="Enter text"></textarea>
+
+      <input type="password" id="password" placeholder="Password (for AES only)">
+
+      <button id="processBtn">Process</button>
+
+      <textarea id="outputText" readonly placeholder="Output"></textarea>
     </div>
 
-    <textarea id="outputText" placeholder="Output..." readonly></textarea>
+    <hr>
+
+    <div class="section">
+      <h2>File Encryption (AES-256-GCM)</h2>
+
+      <input type="file" id="fileInput">
+      <input type="password" id="filePassword" placeholder="Password">
+
+      <div class="file-buttons">
+        <button id="encryptFileBtn">Encrypt File</button>
+        <button id="decryptFileBtn">Decrypt File</button>
+      </div>
+    </div>
 
   </div>
-</section>
+</div>
 
-<script src="crypto-js.min.js"></script>
 <script src="script.js"></script>
 </body>
 </html>
